--- a/index.htm
+++ b/index.htm
@@ -27,7 +27,7 @@
 				<tr>
 					<td><a class="title" href="index.htm">Smockish </a></td>
 					<td><form action="http://www.google.com/search" method="get">
-					<input type="search" name="q" size="28" onblur="value=''" placeholder="Search Artists and Artworks"/>
+					<input type="search" name="q" size="28" onblur="value=''" placeholder="Search Artists and Artwork"/>
 					</form></td>
 					<td><a class="inline" href="#signin"> Sign-In</a>/<a class="inline" href="#reg">Register </a></td>
 					<td class="seperator">||</td>
@@ -86,7 +86,7 @@
 					<h1>Sign In</h1>
 					<hr>
 					<p><input type="email" name="email" placeholder="E-mail Address" required title="[Required] {Limit:6-50} Valid E-mail Address Only" pattern="[a-z0-9.-_$]+@[a-z0-9-_]+\.[a-z]{2,6}" maxlength="50"/></p>
-					<p><input type="password" name="password" placeholder="Password" required title="[Required] {Limit:4-20} Alphanumberic Characters, - _ ! and $ Only." pattern="[a-zA-Z0-9-_!$]{4,20}"/></p>
+					<p><input type="password" name="password" placeholder="Password" required title="[Required] {Limit:4-20} Alphanumeric Characters, - _ ! and $ Only." pattern="[a-zA-Z0-9-_!$]{4,20}"/></p>
 					<p><a class="inline fix" href="#reset">Forgot your password?</a></p>
 					<button type="submit">Sign In To Your Account</button>
 					<p>Not a member? <a class="inline fix" href="#reg">Join Now</a></p>
@@ -120,18 +120,18 @@
 						</tr>
 						<tr>
 							<td><label>Zip Code*</label><br />
-							<input type="text" name="zip" placeholder="Zip Code" required title="[Required] {Limit:5} Numberic Characters Only." pattern="[0-9]{5,5}"/></td>
+							<input type="text" name="zip" placeholder="Zip Code" required title="[Required] {Limit:5} Numeric Characters Only." pattern="[0-9]{5,5}"/></td>
 							<!--<td><label>Website</label><br />
 							<input type="url" name="website" placeholder="Website" title="[Optional] Format:https://..." pattern="https?://.+"/></td>-->
 							<td><label>Referral Code</label><br />
-							<input type="text" name="refcode" placeholder="Referral Code" title="[Optional] {Limit:8} Alphanumberic Characters Only." pattern="[a-zA-Z0-9]{8,8}"/></td>
+							<input type="text" name="refcode" placeholder="Referral Code" title="[Optional] {Limit:8} Alphanumeric Characters Only." pattern="[a-zA-Z0-9]{8,8}"/></td>
 						</tr>
 							
 						<tr>
 							<td><label>E-mail Address*</label><br />
 							<input type="email" name="email" placeholder="E-mail Address" required title="[Required] {Limit:6-50} Valid E-mail Address Only" pattern="[a-z0-9.-_$]+@[a-z0-9-_]+\.[a-z]{2,6}" maxlength="50"/></td>
 							<td><label>Password*</label><br />
-							<input type="password" name="password" placeholder="Password" required title="[Required] {Limit:4-20} Alphanumberic Characters, - _ ! and $ Only." onchange="form.reenter.pattern=this.value;" pattern="[a-zA-Z0-9-_!$]{4,20}"/></td>
+							<input type="password" name="password" placeholder="Password" required title="[Required] {Limit:4-20} Alphanumeric Characters, - _ ! and $ Only." onchange="form.reenter.pattern=this.value;" pattern="[a-zA-Z0-9-_!$]{4,20}"/></td>
 							<td><label>Confirm Password*</label><br />
 							<input type="password" name="cpassword" placeholder="Confirm Password" required title="[Required] Password must match!" pattern="[a-zA-Z0-9-_!$]{4,20}"/></td>
 						</tr>
@@ -142,7 +142,7 @@
 					<input type="checkbox" name="newscheck" /><label>Sign me up!</label>
 					<p>By signing up you agree to Smockish's <a class="iframe fix" href="about/terms.htm">terms and conditions</a> and <a class="iframe fix" href="about/privacy.htm">privacy policy</a>.</p>
 					<button type="submit">Join Now</button>
-					<p>Already a member? <a class="inline fix" href="#signin">Sign In</a></p>
+					<p>Already a Member? <a class="inline fix" href="#signin">Sign In</a></p>
 				</form>
 			</div>
 		</div>
