Google Analytics code added

--- a/Final Commit/Studiocracy/index.html
+++ b/Final Commit/Studiocracy/index.html
@@ -4,6 +4,7 @@
 <style type="text/css">
   #mc_embed_signup{clear:left; font:14px, sans-serif; font-family: "libre baskerville";}
 </style>
+
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
 <meta name="lp-version" content="v1.91.14">
@@ -31,6 +32,19 @@
 <meta name="msapplication-TileColor" content="#ffffff">
 <meta name="msapplication-TileImage" content="favicons/ms-icon-144x144.png">
 <meta name="theme-color" content="#ffffff">
+<style type="text/css">
+  #mc_embed_signup{clear:left; font:14px, sans-serif; font-family: "libre baskerville";}
+</style>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+
+<meta name="lp-version" content="v1.91.14">
+      <!--acbbd62a-52d5-4b2c-9694-bdaf467f6a7f a-->
+<title>Studiocracy</title>
+<meta name="keywords" content="Studiocracy, art, studio, gallery, buy art, local art, sell art, art online, painting, art network, buy art online, art world">
+<meta name="description" content="Welcome to your gallery. Buy art directly from artists at any price range. Build your network and discover rising talent near you.">
+<link href="./index_files/reset-81c62fcc415bd2d6fa009d66c47174b6.css" media="screen" rel="stylesheet" type="text/css">
+<link href="./index_files/page_defaults-869452b0cf263df2eb59fded6331a4f5.css" media="screen" rel="stylesheet" type="text/css">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <style title="page-styles" type="text/css" data-page-type="main_desktop">
 body { color:white; }
 a {
@@ -506,7 +520,7 @@ a {
   margin-right:auto;
   margin-bottom:0px;
   width:100%;
-  height:135px;
+  height:155px;
   position:relative;
   behavior:url(/PIE.htc);
   border-radius:0px;
@@ -1938,6 +1952,9 @@ WebFont.load(lp.webFontLoad);
 <div xmlns="" id="lp-pom-root-color-overlay"></div>
 <div class="lp-positioned-content">
 <div class="lp-element lp-pom-text nlh" id="lp-pom-text-14" style="height: auto;">
+<h1 class="lplh-58" style="text-align: center;">
+<span style="font-size:48px;"><span style="font-family:libre baskerville;"><span style="color:#000000;"><strong><span>Welcome to&nbsp;</span></strong></span><strong style="color: rgb(255, 255, 255);"><span style="color:#000000;"><span>your gallery.</span></strong></span></span>
+</h1>
 </div>
 <div class="lp-element lp-pom-text nlh" id="lp-pom-text-15" style="height: auto;">
 <p class="lplh-22" style="text-align: center;">
@@ -1969,9 +1986,6 @@ WebFont.load(lp.webFontLoad);
 </p>
 </div>
 <div class="lp-element lp-pom-text nlh" id="lp-pom-text-82" style="height: auto;">
-<div class="lplh-22" style="text-align: right;">
-<span style="font-size:48px;"><span style="font-family:libre baskerville;"><span style="color:#000000;"><strong><span>Welcome to&nbsp;</span></strong></span><strong style="color: rgb(255, 255, 255);"><span style="color:#000000;"><span>your gallery.</span></strong></span></span> 
-</div>
 </div>
 <div class="lp-element lp-pom-text nlh" id="lp-pom-text-83" style="height: auto;">
 <div class="lplh-22">
