--- a/Final Commit/Studiocracy/index.html
+++ b/Final Commit/Studiocracy/index.html
@@ -6,7 +6,16 @@
 </style>
 
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
+  ga('create', 'UA-61051535-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
 <meta name="lp-version" content="v1.91.14">
       <!--acbbd62a-52d5-4b2c-9694-bdaf467f6a7f a-->
 <title>Studiocracy</title>
